pages/blogPage/assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Kodchasan", serif;
    font-weight: 400;
    font-style: normal;
    background-color: #F2E8C6;
    color: #333;
    line-height: 1.6;
}

.header {
    background: #800000;
    padding: 10px 20px;
}

.nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-logo img {
    height: 50px;
    width: auto;
}

.nav-links {
    list-style: none;
    display: flex;
    gap: 20px;
}

.nav-links a {
    text-decoration: none;
    color: white;
    font-weight: bold;
}


.nav-links a:hover {
    color: #F2E8C6; 
 }

.container {
    width: 80%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
}

.row {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: space-between;
}

.blog-item {
    background-color: white;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    margin-bottom: 20px;
    flex: 1 1 calc(33.33% - 20px); 
    box-sizing: border-box;
}

.blog-item h2 {
    font-size: 24px;
    color: #333;
    margin-bottom: 10px;
}

.blog-item .post-dtauthor {
    font-size: 14px;
    color: #777;
    margin-bottom: 15px;
}

.blog-item .post-sum {
    font-size: 16px;
    color: #555;
    margin-bottom: 20px;
}

.read-more {
    display: inline-block;
    background-color: #800000;
    color: white;
    padding: 10px 20px;
    text-decoration: none;
    border-radius: 5px;
    font-size: 18px;
}

.read-more:hover {
    background-color: #F2E8C6;
}

.footer {
    background: #800000;
    color: #ddd;
    text-align: center;
    padding: 15px 0;
    position: relative;
    width: 100%;
    bottom: 0;
    left: 0;
    margin-top: 30px;
}

.footer p {
    margin: 0;
    font-size: 14px;
}

@media (max-width: 768px) {
    .blog-item {
        flex: 1 1 calc(50% - 20px); 
    }
}

@media (max-width: 480px) {
    .blog-item {
        flex: 1 1 100%; 
    }
}

